--- a/montagem.html
+++ b/montagem.html
@@ -113,6 +113,11 @@
         </p>
     </article>
 
+    <article class="site-description">
+        <h2>Video Montagem</h2>
+        <iframe src="https://drive.google.com/file/d/1JdXSmP4JaJ78ObuSbxXs8jCo0VHvgBlm/preview" width="640" height="480" allow="autoplay"></iframe>
+    </article>
+
     <footer>
         <p>&copy; 2023 Montagem de Computadores</p>
     </footer>
