--- a/avarias.html
+++ b/avarias.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Montagem/Manuntenção de Computadores</h1>
+        <h1>Montagem/Manutenção de Computadores</h1>
     </header>
     <nav>
         <ul>
@@ -22,91 +22,65 @@
 
     <article class="site-description">
         <h2>Técnicas de Deteção e Reparação de Avarias</h2>
-
-    </article>
-    <article class="site-description"> 
-
-        <h3>1. Arranque do Computador</h3>
         <p>
-            Problemas no arranque do computador podem ser causados por diversos motivos, como falhas no sistema operacional, hardware defeituoso ou configurações inadequadas na BIOS. Algumas técnicas para resolver problemas de arranque incluem:
+            Esta seção oferece insights valiosos sobre a detecção e reparação de avarias em computadores. Abaixo estão algumas técnicas essenciais para solucionar problemas comuns.
         </p>
-        <ul>
-            <li>Verificar a conexão dos cabos de alimentação.</li>
-            <li>Acessar a BIOS para verificar as configurações de inicialização.</li>
-            <li>Utilizar ferramentas de diagnóstico do sistema operacional.</li>
-        </ul>
     </article>
-    <article class="site-description"> 
 
+    <article class="site-description"> 
+        <h3>1. Problemas no Arranque do Computador</h3>
+        <p>
+            <strong>Detecção:</strong> Para identificar problemas de arranque, observe se o computador não inicia, exibe mensagens de erro ou fica preso em uma tela específica.<br>
+            <strong>Conserto:</strong> Verifique a conexão dos cabos de alimentação, acesse a BIOS para ajustes de inicialização e utilize ferramentas de diagnóstico do sistema operacional.
+        </p>
+    </article>
+
+    <article class="site-description"> 
         <h3>2. Avarias Mais Comuns</h3>
         <p>
-            As avarias mais comuns podem envolver problemas de hardware ou software. Identificar a causa específica é crucial para aplicar as soluções adequadas. Alguns passos gerais incluem:
+            <strong>Detecção:</strong> Realize diagnósticos de hardware para identificar falhas em componentes específicos, verifique mensagens de erro no sistema operacional e analise o comportamento anormal do sistema.<br>
+            <strong>Conserto:</strong> Corrija problemas de hardware, mantenha o sistema operacional atualizado e atualize drivers e software conforme necessário.
         </p>
-        <ul>
-            <li>Realizar diagnósticos de hardware.</li>
-            <li>Verificar a integridade do sistema operacional.</li>
-            <li>Atualizar drivers e software.</li>
-        </ul>
     </article>
-    <article class="site-description"> 
 
+    <article class="site-description"> 
         <h3>3. Problemas com o Vídeo</h3>
         <p>
-            Problemas com o vídeo podem resultar em tela preta, artefatos visuais ou ausência de sinal. Técnicas para solucionar problemas de vídeo incluem:
+            <strong>Detecção:</strong> Observe sintomas como tela preta, artefatos visuais ou ausência de sinal.<br>
+            <strong>Conserto:</strong> Verifique a conexão do cabo de vídeo, teste com outra placa de vídeo (se possível) e mantenha os drivers da placa de vídeo atualizados.
         </p>
-        <ul>
-            <li>Verificar a conexão do cabo de vídeo.</li>
-            <li>Testar com outra placa de vídeo (se possível).</li>
-            <li>Atualizar os drivers da placa de vídeo.</li>
-        </ul>
     </article>
-    <article class="site-description"> 
 
+    <article class="site-description"> 
         <h3>4. Problemas com a Motherboard</h3>
         <p>
-            Avarias na motherboard podem causar uma variedade de problemas. Alguns passos para identificar e resolver problemas com a motherboard incluem:
+            <strong>Detecção:</strong> Verifique visualmente danos físicos na motherboard, teste com componentes conhecidos e funcionais.<br>
+            <strong>Conserto:</strong> Atualize o firmware da motherboard, substitua componentes defeituosos e, se possível, realize reparos na motherboard.
         </p>
-        <ul>
-            <li>Verificar visualmente danos físicos na motherboard.</li>
-            <li>Testar com componentes conhecidos e funcionais.</li>
-            <li>Atualizar o firmware da motherboard, se aplicável.</li>
-        </ul>
     </article>
-    <article class="site-description"> 
 
+    <article class="site-description"> 
         <h3>5. Problemas com as Memórias</h3>
         <p>
-            Problemas com as memórias podem resultar em falhas de inicialização ou instabilidade do sistema. Técnicas para resolver problemas com memórias incluem:
+            <strong>Detecção:</strong> Realize testes de memória (memtest), observe falhas de inicialização ou instabilidade do sistema.<br>
+            <strong>Conserto:</strong> Substitua módulos defeituosos, reinsira módulos nos slots correspondentes e ajuste configurações de memória na BIOS.
         </p>
-        <ul>
-            <li>Realizar testes de memória (memtest).</li>
-            <li>Reinserir módulos de memória nos slots correspondentes.</li>
-            <li>Verificar as configurações de memória na BIOS.</li>
-        </ul>
     </article>
-    <article class="site-description"> 
 
+    <article class="site-description"> 
         <h3>6. Problemas com o Processador</h3>
         <p>
-            Problemas com o processador podem levar a falhas de sistema e desempenho insatisfatório. Algumas técnicas para solucionar problemas com o processador incluem:
+            <strong>Detecção:</strong> Observe falhas de sistema e desempenho insatisfatório.<br>
+            <strong>Conserto:</strong> Verifique o resfriamento do processador, teste com outro processador (se possível) e atualize o BIOS da motherboard.
         </p>
-        <ul>
-            <li>Verificar o resfriamento do processador.</li>
-            <li>Testar com outro processador, se possível.</li>
-            <li>Atualizar o BIOS da motherboard.</li>
-        </ul>
     </article>
-    <article class="site-description"> 
 
+    <article class="site-description"> 
         <h3>7. Problemas com os Periféricos</h3>
         <p>
-            Problemas com periféricos podem incluir falhas de teclado, mouse, impressoras, etc. Técnicas para resolver problemas com periféricos incluem:
+            <strong>Detecção:</strong> Identifique falhas em teclado, mouse, impressoras, etc.<br>
+            <strong>Conserto:</strong> Verifique as conexões dos periféricos, teste com periféricos conhecidos e funcionais, e atualize drivers e configurações no sistema operacional.
         </p>
-        <ul>
-            <li>Verificar as conexões dos periféricos.</li>
-            <li>Testar com periféricos conhecidos e funcionais.</li>
-            <li>Verificar drivers e configurações no sistema operacional.</li>
-        </ul>
     </article>
 
     <footer>
