--- a/avarias.html
+++ b/avarias.html
@@ -63,7 +63,7 @@
         <h3>5. Problemas com as Memórias</h3>
         <p>
             <strong>Detecção:</strong> Realize testes de memória (memtest), observe falhas de inicialização ou instabilidade do sistema.<br>
-            <strong>Conserto:</strong> Substitua módulos defeituosos, reinsira módulos nos slots correspondentes e ajuste configurações de memória na BIOS.
+            <strong>Conserto:</strong> Limpe os contactos com uma borracha limpa, substitua módulos defeituosos, reinsira módulos nos slots correspondentes e ajuste configurações de memória na BIOS.
         </p>
     </article>
 
